# flipperzero-protobuf-py

./: .gitmodules  README.md  pyproject.toml  test.py
async_protopy/: executor.py  rebuild.sh
async_protopy/clients/: application_client.py  base_client.py  desktop_client.py  gpio_client.py  gui_client.py  property_client.py  protobuf_client.py  storage_client.py  system_client.py
async_protopy/commands/: application_commands.py  base_command.py  gpio_commands.py  gui_commands.py  property_commands.py  storage_commands.py  system_commands.py
async_protopy/connectors/: base_connector.py  serial_connector.py
async_protopy/flipperzero_protobuf_compiled/: application_pb2.py  desktop_pb2.py  flipper_pb2.py  gpio_pb2.py  gui_pb2.py  property_pb2.py  storage_pb2.py  system_pb2.py
flipperzero_protobuf/flipperCmd/: flipperCmd.py
